force-app/main/default/objects/Credit_Account__c/Credit_Account__c.object-meta.xml
<CustomObject>
    <label>Credit Account</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Consumer Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>