force-app/main/default/objects/Credit_Account__c/fields/Credit_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Account_Type__c</fullName>
    <label>Credit Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>