force-app/main/default/objects/Credit_Account__c/fields/Explanation_Provided__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Provided__c</fullName>
    <label>Explanation Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>