force-app/main/default/objects/Credit_Account__c/fields/Latest_Credit_Provider__c.field-meta.xml
<CustomField>
    <fullName>Latest_Credit_Provider__c</fullName>
    <label>Latest Credit Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>