force-app/main/default/objects/Credit_Account__c/fields/Original_Credit_Provider__c.field-meta.xml
<CustomField>
    <fullName>Original_Credit_Provider__c</fullName>
    <label>Original Credit Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>