force-app/main/default/objects/Credit_Account__c/fields/Original_Default_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Default_Amount__c</fullName>
    <label>Original Default Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>