force-app/main/default/objects/Credit_Account__c/fields/Original_Default_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Default_Date__c</fullName>
    <label>Original Default Date</label>
    <type>Date</type>
</CustomField>