force-app/main/default/objects/Credit_Account__c/fields/Original_Report_Reason__c.field-meta.xml
<CustomField>
    <fullName>Original_Report_Reason__c</fullName>
    <label>Original Report Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>