force-app/main/default/objects/Credit_Account__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <label>Party</label>
    <referenceTo>clcommon__Party__c</referenceTo>
    <relationshipLabel>Credit Accounts</relationshipLabel>
    <relationshipName>Credit_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>