force-app/main/default/objects/Credit_Account__c/fields/Report_Reason__c.field-meta.xml
<CustomField>
    <fullName>Report_Reason__c</fullName>
    <label>Report Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>